src/objects/CPQ_Platform__c/CPQ_Platform__c.object-meta.xml
<CustomObject>
    <label>CPQ Platform</label>
    <nameField>
        <label>Serial Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CPQ Platforms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>