src/objects/CPQ_Platform__c/fields/Activation_Key__c.field-meta.xml
<CustomField>
    <fullName>Activation_Key__c</fullName>
    <label>Activation Key</label>
    <type>TextArea</type>
</CustomField>