src/objects/CPQ_Platform__c/fields/Distribution_Number__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Number__c</fullName>
    <description>A new field to hold SAP Distribution # (Contract /Sales /Repair / ….)</description>
    <label>Distribution Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>