src/objects/CPQ_Platform__c/fields/License_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>License_Expiry_Date__c</fullName>
    <label>License Expiry Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>