src/objects/CPQ_Platform__c/fields/License_Status__c.field-meta.xml
<CustomField>
    <fullName>License_Status__c</fullName>
    <label>License Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Device-Created</fullName>
            </value>
            <value>
                <fullName>Activation Key-Linked</fullName>
            </value>
            <value>
                <fullName>Activation Key-Created</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>