src/objects/CPQ_Platform__c/fields/Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Line Item</label>
    <referenceTo>Apttus_Config2__LineItem__c</referenceTo>
    <relationshipLabel>CPQ Platforms</relationshipLabel>
    <relationshipName>CPQ_Platforms</relationshipName>
    <type>Lookup</type>
</CustomField>