src/objects/CPQ_Platform__c/fields/Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Line Item</label>
    <referenceTo>Apttus_Config2__OrderLineItem__c</referenceTo>
    <relationshipLabel>CPQ Platforms</relationshipLabel>
    <relationshipName>CPQ_Platforms</relationshipName>
    <type>Lookup</type>
</CustomField>