src/objects/CPQ_Platform__c/validationRules/Validation_Rule_on_Expired_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Rule_on_Expired_Date</fullName>
    <active>true</active>
    <errorConditionFormula>DATEVALUE(License_Expiry_Date__c) &lt; TODAY()</errorConditionFormula>
    <errorMessage>License Expiry date should not be less than today date</errorMessage>
</ValidationRule>